# A-DS

./: .gitignore  CMakeLists.txt  README.md  a.out  dynarr.h  lab1  lab1.cpp  lab2  lab2.cpp  lab2_2  lab3.cpp  node.h  parseTree.h  sort  sortirovki.cpp  tree.txt
a.out.dSYM/Contents/Resources/DWARF/: a.out
dyn array/: CMakeLists.txt  CMakeLists.txt.user.cdca992  array.cpp  array.h  main.cpp  number.h  tapplication.cpp  tapplication.h  tarray.cpp  tarray.h
lab1.dSYM/Contents/Resources/DWARF/: lab1
lab1.dSYM/Contents/Resources/Relocations/aarch64/: lab1.yml
lab2.dSYM/Contents/Resources/DWARF/: lab2
lab2_2.dSYM/Contents/: Info.plist
lab2_2.dSYM/Contents/Resources/DWARF/: lab2_2
lab2_2.dSYM/Contents/Resources/Relocations/aarch64/: lab2_2.yml
sort.dSYM/Contents/Resources/DWARF/: sort
trees/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lab3
trees/lab3.dSYM/Contents/Resources/DWARF/: lab3
trees/lab3.dSYM/Contents/Resources/Relocations/aarch64/: lab3.yml
trees/lab3.exe.dSYM/Contents/: Info.plist
trees/lab3.exe.dSYM/Contents/Resources/Relocations/aarch64/: lab3.exe.yml
